--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -537,6 +537,13 @@
           </layout>
          </widget>
         </item>
+        <item row="11" column="0" colspan="2">
+         <widget class="QPushButton" name="pushButton">
+          <property name="text">
+           <string>TEC danger zone</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </item>
