--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -272,7 +272,7 @@
           </property>
          </widget>
         </item>
-        <item row="10" column="0">
+        <item row="11" column="0">
          <widget class="QLabel" name="labelFlashButtons">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -350,7 +350,7 @@
           </property>
          </widget>
         </item>
-        <item row="10" column="1">
+        <item row="11" column="1">
          <widget class="QWidget" name="horizontalWidget_2" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -537,10 +537,27 @@
           </layout>
          </widget>
         </item>
-        <item row="11" column="0" colspan="2">
+        <item row="12" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="14" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+         </widget>
+        </item>
+        <item row="14" column="1">
+         <widget class="QLineEdit" name="lineEdit"/>
+        </item>
+        <item row="15" column="1">
          <widget class="QPushButton" name="pushButton">
           <property name="text">
-           <string>TEC danger zone</string>
+           <string>TEC mods</string>
           </property>
          </widget>
         </item>
