--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -19,7 +19,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>tessie</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frameTECController">
@@ -1281,6 +1281,19 @@
          </property>
          <property name="frame">
           <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="labelBot_Voltage_3">
+         <property name="font">
+          <font>
+           <family>.AppleSystemUIFont</family>
+           <pointsize>8</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>TEC select</string>
          </property>
         </widget>
        </item>
